load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "clip",
    srcs = ["clip/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "vit",
    srcs = ["vit/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "unet",
    srcs = ["unet/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "decoder",
    srcs = ["decoder/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "encoder",
    srcs = ["encoder/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "diffusion",
    srcs = ["diffusion/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "txt2img",
    srcs = ["txt2img/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@ccv//lib:ccv",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "img2img",
    srcs = ["img2img/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@ccv//lib:ccv",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "inpainting",
    srcs = ["inpainting/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@ccv//lib:ccv",
        "@s4nnc//nnc",
    ],
)
