load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary")

swift_binary(
    name = "clip",
    srcs = ["clip/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "open_clip",
    srcs = ["open_clip/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "vit",
    srcs = ["vit/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "unet",
    srcs = ["unet/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "controlnet",
    srcs = ["controlnet/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "t2i-adapter",
    srcs = ["t2i-adapter/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "decoder",
    srcs = ["decoder/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "dreambooth",
    srcs = ["dreambooth/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "encoder",
    srcs = ["encoder/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "realesrgan",
    srcs = ["realesrgan/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "restoreformer",
    srcs = ["restoreformer/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "parsenet",
    srcs = ["parsenet/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "diffusion",
    srcs = ["diffusion/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "txt2img",
    srcs = ["txt2img/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "img2img",
    srcs = ["img2img/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "inpainting",
    srcs = ["inpainting/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@ccv//lib:ccv",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "pickle",
    srcs = ["pickle/main.swift"],
    deps = [
        "@ZIPFoundation",
        "@s4nnc//nnc",
        "@swift-fickling//:fickling",
    ],
)

swift_binary(
    name = "coreml",
    srcs = ["coreml/main.swift"],
    data = [
        "coreml/data_layout1.json",
        "coreml/data_layout2.json",
    ],
    deps = [
        "//:diffusion",
        "@ZIPFoundation",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "randn",
    srcs = ["randn/main.swift"],
    data = [],
    deps = [
        "//:diffusion",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "canny2img",
    srcs = ["canny2img/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@ccv//lib:ccv",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "lora",
    srcs = ["lora/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@ZIPFoundation",
        "@ccv//lib:ccv",
        "@s4nnc//nnc",
        "@swift-fickling//:fickling",
    ],
)

swift_binary(
    name = "kandinsky",
    srcs = ["kandinsky/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "kandinsky2",
    srcs = ["kandinsky2/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "kandinsky2/sentencepiece.bpe.model",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@ccv//lib:ccv",
        "@s4nnc//nnc",
        "@swift-sentencepiece//:swift-sentencepiece",
    ],
)

swift_binary(
    name = "vqgan",
    srcs = ["vqgan/main.swift"],
    deps = [
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "q6p",
    srcs = ["q6p/main.swift"],
    deps = [
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "lora_training",
    srcs = ["lora_training/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@ZIPFoundation",
        "@ccv//lib:ccv",
        "@s4nnc//nnc",
        "@swift-fickling//:fickling",
    ],
)

swift_binary(
    name = "sdxl",
    srcs = ["sdxl/main.swift"],
    deps = [
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "sdxl_txt2img",
    srcs = ["sdxl_txt2img/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "sdxl_lora_training",
    srcs = ["sdxl_lora_training/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "sdxl_lora_txt2img",
    srcs = ["sdxl_lora_txt2img/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "blip2",
    srcs = ["blip2/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "blip2_beam",
    srcs = ["blip2_beam/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "ip-adapter",
    srcs = ["ip-adapter/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "consistencydecoder",
    srcs = ["consistencydecoder/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "ssd-1b",
    srcs = ["ssd-1b/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "lcm-sdxl",
    srcs = ["lcm-sdxl/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "lcm_sdxl_txt2img",
    srcs = ["lcm_sdxl_txt2img/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "taesddecoder",
    srcs = ["taesddecoder/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "svd",
    srcs = ["svd/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "svd_i2v",
    srcs = ["svd_i2v/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "fooocus_inpaint",
    srcs = ["fooocus_inpaint/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "depth_anything",
    srcs = ["depth_anything/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "moondream1_converter",
    srcs = ["moondream1_converter/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "moondream1",
    srcs = ["moondream1/main.swift"],
    data = [
        "moondream1/merges.txt",
        "moondream1/vocab.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "wurstchen_converter",
    srcs = ["wurstchen_converter/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "wurstchen",
    srcs = ["wurstchen/main.swift"],
    data = [
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
    ],
)

swift_binary(
    name = "layerdiffuse",
    srcs = ["layerdiffuse/main.swift"],
    data = [
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
    ],
)

swift_binary(
    name = "sd3_converter",
    srcs = ["sd3_converter/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
        "sd3/spiece.model",
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
        "@swift-sentencepiece//:swift-sentencepiece",
    ],
)

swift_binary(
    name = "sd3",
    srcs = ["sd3/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
        "sd3/spiece.model",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@swift-sentencepiece//:swift-sentencepiece",
    ],
)

swift_binary(
    name = "pixart_converter",
    srcs = ["pixart_converter/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
        "sd3/spiece.model",
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
        "@swift-sentencepiece//:swift-sentencepiece",
    ],
)

swift_binary(
    name = "pixart",
    srcs = ["pixart/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
        "sd3/spiece.model",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@swift-sentencepiece//:swift-sentencepiece",
    ],
)

swift_binary(
    name = "kolors_converter",
    srcs = ["kolors_converter/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
        "sd3/spiece.model",
    ],
    deps = [
        "//:diffusion",
        "@PythonKit",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@s4nnc//nnc:nnc_python",
        "@swift-sentencepiece//:swift-sentencepiece",
    ],
)

swift_binary(
    name = "kolors",
    srcs = ["kolors/main.swift"],
    data = [
        "clip/merges.txt",
        "clip/vocab.json",
        "open_clip/bpe_simple_vocab_16e6.txt",
        "open_clip/vocab_16e6.json",
        "sd3/spiece.model",
    ],
    deps = [
        "//:diffusion",
        "@SwiftNumerics//:Numerics",
        "@SwiftPNG//:PNG",
        "@s4nnc//nnc",
        "@swift-sentencepiece//:swift-sentencepiece",
    ],
)
